xwayland: Decouple selection sync'ing from focus changes

The current selection should be unaffected by the active window. For
example, if a client sets a selection and then active window changes,
that selection should still remain set. The current selection should
only change when it's set explicitly (either by an X or a Wayland client).

Regarding snooping clipboard contents, our SelectionRequest handler has
a guard to protect us against that case.

(cherry picked from commit 947d2c5ad0746d807b04f6bb382e1d4ddb1b7f29)

BUG: 508004